# Taskweavn

./: .gitignore  AGENTS.md  README.md  README_zh.md  pyproject.toml
docs/: README.md  agent_project_plan.md  agent_project_plan_en.md  agent_project_plan_v2.html  agent_project_plan_v2_en.html  architecture.md  configuration.md  interaction_layer_design.md  multi_agent_collaboration_architecture.html  multi_agent_collaboration_architecture.md  multi_agent_collaboration_architecture_en.html  multi_agent_collaboration_architecture_en.md  planning_workflow.md  roadmap.md  user test examples
docs/archive/legacy-2026-05-18/user_cases/workspace/user-test-cli/: README.md  TODO.md  pyproject.toml
docs/archive/legacy-2026-05-18/user_cases/workspace/user-test-cli/src/notesctl/: __init__.py  cli.py  commands.py
docs/archive/legacy-2026-05-18/user_cases/workspace/user-test-cli/tests/: test_commands.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
garbage_collect/: agent_project_plan.md  agent_project_plan_en.md  architecture.md  interaction_layer_design.md  multi_agent_collaboration_architecture.md  multi_agent_collaboration_architecture_en.md
prompts/: codex-task-prefix.md
scripts/: build_plato_computer_use_helper_dev.py  codex-task  manual_computer_use_helper_preflight.py  manual_wechat_desktop_tool_smoke.py  manual_wechat_send_smoke.py  reconcile_wechat_send_boundary.py  repo_line_stats.py
tests/: test_agent_llm_config.py  test_agent_llm_resolver.py  test_agent_loop_prompt.py  test_agent_message.py  test_api_publish_transport.py  test_app_control_helper_entrypoint.py  test_app_control_helper_executable.py  test_app_control_migration_conversation.py  test_app_control_service_host.py  test_ask_projection.py  test_ask_recovery.py  test_ask_store.py  test_audit.py  test_audit_entry_closure.py  test_audit_page_contract_models.py  test_audit_runtime_config_provider.py  test_authoring_command_service.py  test_authoring_context_builder.py  test_autonomy_gate.py  (+144 more)
(+1228 files in other folders)
