[project]
name = "taskweavn"
version = "0.1.0"
description = "TaskWeavn: a task agent built on OpenHands SDK with strongly-typed Action/Observation, EventStream, and pluggable Runtime."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "openhands-sdk>=1.19.0",
    "openai>=2.0.0",
    "typer>=0.12.0",
    "pydantic>=2.10",
    "docker>=7.0.0",
    "pyyaml>=6.0",
    "app-control-protocol>=0.3.0,<0.4.0",
    "computer-use-macos[accessibility]>=0.3.0,<0.4.0; sys_platform == 'darwin'",
    "wechat-desktop-tool>=0.3.0,<0.4.0",
]

[project.scripts]
taskweavn = "taskweavn.cli.main:app"
plato-computer-use-helper = "taskweavn.server.app_control_helper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskweavn"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6.0",
    "mypy>=1.10",
]
packaging = [
    "pyinstaller>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external services (Docker, network) and are skipped by default if unavailable",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
