[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notesctl"
version = "0.1.0"
description = "A CLI tool to manage local Markdown notes."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
notesctl = "notesctl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
